Restrict effective 2g blocking to cases where NQE says we are 2G-like.

The current impl triggers the effective 2g blocking if we're on either
2g or effective 2g.

This change simplifies things so we only trigger effective 2g blocking if
on effective 2g.

This makes experiments cleaner, as we can evaluate the impact of this
feature when NQE determines we're on 2G.

BUG=682260

Review-Url: https://codereview.chromium.org/2643773002
Cr-Commit-Position: refs/heads/master@{#444520}

Former-commit-id: 0b460c475f6f6fba74d9ba731398a1ce5328d4b0